$Id$

Summary of Changes for Duro

Changes for Duro 0.15

- Changed interface and calling conventions for user-defined operators.

- Added RDB_get_update_op to the public interface. Renamed RDB_call_ro_op
and RDB_call_update_op as RDB_call_ro_op_by_name and RDB_call_update_op_by_name.
Added RDB_call_update_op with new semantics.

- Conversion of expressions etc. to string is now part of the core.

- File I/O

- Upgrade to Berkeley DB 5.2. (But older versions should work too)

- Store user-defined operators as source code

- RDB_expr_type now always raises an error if the type could not be determined.

- Change in catalog table SYS_POSSREPCOMPS

- Changed type handling in RDB_evaluate(), RDB_call_ro_op(), and
   RDB_call_update_op(),

Duro D/T:

- LEAVE is now supported

- Improved array support

- Non-scalar types allowed as possrep components

- Changed FOR to allow for zero iterations

Changes for Duro 0.14

- Upgraded to Berkeley DB 4.7.

- Duro D/T now supports CASE and constraints.

- Added exception handling to Duro D/T.

- Dropped first argument of CONNECT.

- The return type is now explicitly passed to functions which implement
  read-only operators.

- Single quotes are now used in data output in Tutorial D form.

- If a type is not found, NAME_ERROR is raised instead of NOT_FOUND_ERROR.

- Added limited type implementation functionality to Duro D/T.

- Added operator GETENV.

Changes for Duro 0.13

- Renamed build target "check" to "test".

- Upgraded to Berkeley DB 4.6.

- Removed arguments ltfnp, arg, and txp from parsing functions.

- Added RDB_type_is_relation().

- Added built-in operators TUPLE and RELATION.

- Dropped argc argument of RDB_ro_op().

- RDB_insert() and RDB_multi_assign() now support inserting tables.

- RDB_table_to_array() now supports two modes (buffered and unbuffered).

- Implemented interpreter Duro D/T.

- Fixed bug in Duroadmin - now uses correct floating-point type.

- Replaced ATTRIBUTE_NOT_FOUND_ERROR by NAME_ERROR.
