@@ -21,7 +21,7 @@ create_table(RDB_database *dbp, RDB_exec_context *ecp)
     key.strv = NULL;
     key.strc = 0;
     tbp = RDB_create_table("DEEDUM", 0, NULL, 1, &key, ecp, &tx);
-    if (ret != RDB_OK) {
+    if (tbp == NULL) {
         RDB_rollback(ecp, &tx);
         return RDB_ERROR;
     }
